tests/fixtures/invalid/round_set.py
# Cannot call round() with Set[int]
x = round({1, 2, 3})
